--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
       background:var(--card); border-radius:28px; padding:56px 64px; text-align:center;
       box-shadow:0 12px 36px rgba(0,0,0,.08); position:relative; overflow:hidden;
     }
-    .card::before,.card::after{ content:"❤"; position:absolute; font-size:64px; opacity:.08 }
-    .card::before{ top:10px; left:16px }
-    .card::after{ bottom:8px; right:18px }
+    .heart{
+      position:absolute; font-size:64px; color:#ff0000; opacity:0.25; transition:transform 0.2s ease;
+    }
+    .heart.top-left{ top:10px; left:16px }
+    .heart.bottom-right{ bottom:8px; right:18px }
+    .heart.animate{
+      transform:scale(1.4);
+    }
     h1{
       margin:0 0 12px; font-size:clamp(44px,7vw,80px); line-height:1.1; letter-spacing:.5px;
       color:var(--text);
@@ -35,7 +40,7 @@
       height:70px; display:flex; align-items:center; justify-content:center;
       transition:transform 0.2s ease;
     }
-    .animate{
+    .counter.animate{
       transform:scale(1.3);
     }
     @media (prefers-color-scheme: dark){
@@ -52,6 +57,8 @@
 </head>
 <body>
   <main class="card" aria-label="رسالة">
+    <span class="heart top-left">❤</span>
+    <span class="heart bottom-right">❤</span>
     <h1>أحبك سارة</h1>
     <hr />
     <div class="counter" id="counter">1</div>
@@ -59,6 +66,7 @@
   <script>
     let num = 1;
     const counter = document.getElementById('counter');
+    const hearts = document.querySelectorAll('.heart');
     const interval = setInterval(() => {
       num++;
       if(num > 12){
@@ -67,7 +75,11 @@
       }
       counter.textContent = num;
       counter.classList.add('animate');
-      setTimeout(()=>counter.classList.remove('animate'),150);
+      hearts.forEach(h => h.classList.add('animate'));
+      setTimeout(()=>{
+        counter.classList.remove('animate');
+        hearts.forEach(h => h.classList.remove('animate'));
+      },150);
     }, 400); // أسرع (كل 0.4 ثانية)
   </script>
 </body>
